--- a/Iberus/Iberus.vcxproj.filters
+++ b/Iberus/Iberus.vcxproj.filters
@@ -157,6 +157,8 @@
     <ClInclude Include="src\Renderer\OpenGLRenderer\OpenGLTexture.h" />
     <ClInclude Include="src\Renderer\OpenGLRenderer\OpenGLShader.h" />
     <ClInclude Include="src\Scene\Resources\Buffer.h" />
+    <ClInclude Include="src\Renderer\ShaderBindings.h" />
+    <ClInclude Include="src\Renderer\OpenGLRenderer\OpenGLShaderBindings.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Application.cpp">
@@ -238,5 +240,7 @@
     <ClCompile Include="src\Renderer\OpenGLRenderer\OpenGLTexture.cpp" />
     <ClCompile Include="src\Renderer\OpenGLRenderer\OpenGLShader.cpp" />
     <ClCompile Include="src\Scene\Resources\Buffer.cpp" />
+    <ClCompile Include="src\Renderer\ShaderBindings.cpp" />
+    <ClCompile Include="src\Renderer\OpenGLRenderer\OpenGLShaderBindings.cpp" />
   </ItemGroup>
 </Project>
